# synchronisation-monitors

./: CMakeLists.txt  README.md
include/: buffer.h  car-type.h  fdstream.h  terminal-FILE.h  terminal-stream.h
src/: buffer.cpp  car-type.cpp  main.cpp  terminal-FILE.c  terminal-stream.cpp
